--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -92,4 +92,5 @@ pasv_addr_resolve=YES
 seccomp_sandbox=NO
 # Run in background
 background=YES
-
+chroot_local_user=YES
+allow_writeable_chroot=YES
